--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="index.js"></script>
-    <H1>hello</H1>
+    <H1>rahul</H1>
 </head>
 
 <body>
