--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
     <script src="index.js"></script>
     <H1>hello</H1>
+
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="index.js"></script>
+    <H1>hello</H1>
 </head>
 
 <body>
